--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
 </div>
 
 
-<section id="About" data-magellan-target="About" class="row bodyStart">
+<article id="About" data-magellan-target="About" class="row bodyStart">
     <div class="alert columns small-12 medium-6 text-center">
         <h1 style="font-family: Oswald, sans-serif">
             What is LinkMyProf
@@ -121,7 +121,7 @@
             word search, but data mining algorithms that use Cosine distance as the base, which are still to be
             determined.</p>
     </div>
-</section>
+</article>
 
 <section id="Ideas" data-magellan-target="Ideas" class="row text-center">
     <div class="hide-for-small-only medium-9 medium-centered text-center">
@@ -167,7 +167,7 @@
 </section>
 <section id="Intro" data-magellan-target="Intro" class="row">
     <div class="hide-for-small-only medium-9 medium-centered flex-video columns">
-        <video id=Trailer class=trailer width="1280" height= auto  controls allowfullscreen>
+        <video id=Trailer class=trailer width="1280" height=auto controls allowfullscreen>
             <source src="./media/WhatisLinkedIn.mp4">
         </video>
     </div>
@@ -204,18 +204,20 @@
         <p>This gut is lazy. He leaves nothing here</p>
     </div>
 </section>
-
-<section id="Foot">
-    <div class="small-12 medium-6 columns text-center">
-        <h2 style="font-family: Oswald, sans-serif; font-size: 20px">Designed by Yixiang</h2>
+<footer id ="footer">
+    <div id="Foot-container">
+        <div class="row text-center Foot">
+            <div class="small-12 medium-6 columns ">
+                <h2 style="font-family: Oswald, sans-serif; font-size: 20px">Designed by Yixiang</h2>
+            </div>
+            <div class="small-12 medium-6 columns ">
+                <i class="fa fa-facebook-square fa-2x"></i>
+                <i class="fa fa-twitter-square fa-2x"></i>
+                <i class="fa fa-tumblr-square fa-2x"></i>
+            </div>
+        </div>
     </div>
-    <div class="small-12 medium-6 columns text-center">
-        <i class="fa fa-facebook-square fa-2x"></i>
-        <i class="fa fa-twitter-square fa-2x"></i>
-        <i class="fa fa-tumblr-square fa-2x"></i>
-    </div>
-</section>
-
+</footer>
 
 <!-- Scripts -->
 
