--- a/public/index.html
+++ b/public/index.html
@@ -16,25 +16,26 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./favIcon/apple-icon-180x180.png">
     <link rel="icon" type="image/png" sizes="192x192" href="./favIcon/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="96x96" href="./favIcon/favicon-96x96.png">
+
 </head>
 
-<body id="Home">
-<div data-sticky-container>
-    <nav id="navbar1" class="top-bar sticky hide-for-small-only" data-sticky data-margin-top="0">
-        <ul id="headmenu1" data-magellan data-magellan-target="Home" class="medium-horizontal menu">
-            <li><a href="#Home">
+<body id="Home" ng-app="mainApp" ng-controller="mainController">
+<div>
+    <nav id="navbar1" class="top-bar sticky hide-for-small-only">
+        <ul id="headmenu1" class="medium-horizontal menu">
+            <li><a href="#/home">
                 <button id="HomeButton" class="button">Home</button>
             </a></li>
             <li><a href="#About">
                 <button id="AboutButton" class="button">About</button>
             </a></li>
-            <li><a href="#Ideas">
-                <button id="IdeasButton" class="button">Idea</button>
+            <li><a href="#/university">
+                <button id="UnivButton" class="button">Universities</button>
             </a></li>
-            <li><a href="#Intro">
-                <button id="IntroButton" class="button">IntroVideo</button>
+            <li><a href="#/prof">
+                <button id="IntroButton" class="button">Professor</button>
             </a></li>
-            <li><a href="#Team">
+            <li><a href="#/team">
                 <button id="TeamButton" class="button">Team</button>
             </a></li>
             <li><a>
@@ -52,7 +53,7 @@
                 </a>
                 <ul class="menu vertical nested">
                     <li><a href="#Home" class="button">HOME</a></li>
-                    <li><a class="button" href="#About">ABOUT</a></li>
+                    <li><a class="button" href="#univ">UNIVERSITY</a></li>
                     <li><a class="button" href="#Ideas">IDEAS</a></li>
                     <li><a class="button" href="#Team">TEAM</a></li>
                     <li><a class=" primary button" data-open="Login-form" href="#">LOGIN</a>
@@ -85,95 +86,15 @@
     </div>
 </div>
 
+<div ng-view>
+</div>
 
-<article id="About" data-magellan-target="About" class="row bodyStart">
-    <div class="alert columns small-12 medium-6 text-center">
-        <h1 style="font-family: Oswald, sans-serif">
-            What is LinkMyProf
-        </h1>
-        <p>
-            The project LinkMyProf aims at helping people look for all kinds of information about professors:
-            their research interests, their emails, their publications, what kind of PHD students they are looking for
-            currently, etc. </p>
-        <p>
-            We believe that this kind of assistance is crucial when a student starts to find a interesting research
-            topic or have a problem to decide which university they should attend.
-            They can search their matches in our data base and email the professors directly. Professors, on the other
-            hand, can post information on their personal webpage and deliver it to all student interested in his
-            project.</p>
-        <p>
-            It is the combination of LinkedIn and Rate My Professor.
-        </p>
-    </div>
-    <div class="alert columns small-12 medium-6 text-center">
-        <h1 class="text-center" style="font-family: Oswald, sans-serif">How do we work</h1>
-        <p> To get the data we need, we will firstly write a script to extract professor’s information from the
-            websites. </p>
-        <p>We need professor’s name, university address, department and email address and their research interest at
-            least. Also, we can put their personal website in our database. We will get all of these data from
-            universities’ official websites where they post faculty and staff information.</p>
-        <p>As for the advanced function, we currently have the following ideas:</p>
-        <p>Firstly, I believe our information extraction algorithm will become our first advanced function. Since
-            university’s websites usually have different structures, we need to write script dealing with these
-            different situations.
-        </p>
-        <p>Secondly, we are considering auto match students and professor’s research. It should not sole rely on key
-            word search, but data mining algorithms that use Cosine distance as the base, which are still to be
-            determined.</p>
-    </div>
-</article>
 
-<section id="Ideas" data-magellan-target="Ideas" class="row text-center">
-    <div class="hide-for-small-only medium-9 medium-centered text-center">
-        <h1>Ideas: Under Construction</h1>
-        <div class="orbit" data-orbit>
-            <ul class="orbit-container">
-                <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span><i
-                        class="fa fa-angle-left fa-2x"></i></button>
-                <button class="orbit-next"><span class="show-for-sr">Next Slide</span><i
-                        class="fa fa-angle-right fa-2x"></i></button>
-                <li class="is-active orbit-slide">
-                    <img class="orbit-image" src="./media/Prof1.jpg">
-                    <figcaption class="orbit-caption">First Professor</figcaption>
-                </li>
-                <li class="orbit-slide">
-                    <img class="orbit-image" src="./media/Prof2.jpg">
-                    <figcaption class="orbit-caption">Second Professor</figcaption>
-                </li>
-                <li class="orbit-slide">
-                    <img class="orbit-image" src="./media/Prof3.jpg">
-                    <figcaption class="orbit-caption">Third Professor</figcaption>
-                </li>
-                <li class="orbit-slide">
-                    <img class="orbit-image" src="./media/Prof4.jpg">
-                    <figcaption class="orbit-caption">Last Professor</figcaption>
-                </li>
-            </ul>
-            <nav class="orbit-bullets">
-                <button class="is-active" data-slide="0"><span class="show-for-sr">First slide details.</span><span
-                        class="show-for-sr">Current Slide</span></button>
-                <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
-                <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
-                <button data-slide="3"><span class="show-for-sr">Fourth slide details.</span></button>
-            </nav>
-        </div>
-    </div>
-    <div class="show-for-small-only small-12 text-center columns">
-        <img class="orbit-image" src="./media/Prof1.jpg">
-        <img class="orbit-image" src="./media/Prof2.jpg">
-        <img class="orbit-image" src="./media/Prof3.jpg">
-        <img class="orbit-image" src="./media/Prof4.jpg">
-    </div>
-</section>
 <section id="Intro" data-magellan-target="Intro" class="row">
-    <div class="hide-for-small-only medium-9 medium-centered flex-video columns">
-        <video id=Trailer class=trailer width="1280" height=auto controls allowfullscreen>
-            <source src="./media/WhatisLinkedIn.mp4">
-        </video>
-    </div>
+
 </section>
 
-<section id="Team" data-magellan-target="Team" class="row text-center">
+<!--section id="Team" data-magellan-target="Team" class="row text-center fullWidth">
     <h1 style="padding-bottom: 3%">Meet Our Team</h1>
     <div class="columns small-12 medium-6 large-3">
         <div class="PeoplePic">
@@ -204,9 +125,9 @@
         <p>This gut is lazy. He leaves nothing here</p>
     </div>
 </section>
-<footer id ="footer">
+<footer id="footer">
     <div id="Foot-container">
-        <div class="row text-center Foot">
+        <div class="row text-center Foot fullWidth">
             <div class="small-12 medium-6 columns ">
                 <h2 style="font-family: Oswald, sans-serif; font-size: 20px">Designed by Yixiang</h2>
             </div>
@@ -217,16 +138,19 @@
             </div>
         </div>
     </div>
-</footer>
+</footer -->
 
 <!-- Scripts -->
 
 <script src="./lib/jquery-2.1.3.min/index.js"></script>
 <script src="./foundation6_lib/js/foundation.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-route.min.js"></script>
+<script src="./js/app.js"></script>
+<script src="./js/controller.js"></script>
 <script src="./js/script.js"></script>
 <script>
     $(document).foundation();
 </script>
-<script src="http://localhost:35729/livereload.js"></script>
 </body>
 </html>
